# InformixAlchemy

./: .env.informix.example  .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  run_tests.py  setup.cfg  setup.py
.github/workflows/: ci.yml
IfxAlchemy/: IfxPy.py  __init__.py  base.py  provision.py  pyodbc.py  reflection.py  requirements.py  sqla_compat.py
scratchpad/: scratchpad.md  test-ifx-sa.py  test-ifx-system.py  test1.py  z_test_sqlalchemy.py
test/: conftest.py  pytest.ini  test_001_CRUD.py  test_002_Extended_DataType.py  test_autoincrement_serial.py  test_autoincrement_serial_old.py  test_cast_type_decorator.py  test_ddl_compiler.py  test_ddl_compiler_old.py  test_ddl_execute.py  test_distribution_metadata.py  test_engine_name.py  test_has_table_contract.py  test_ifxpy_dialect.py  test_import_dbapi.py  test_named_constraint_compilation.py  test_out_parameters.py  test_packaging_entrypoints.py  test_probe4_autoincrement_isolation.py  test_pyodbc_connect_args.py  test_quoting_and_case.py  test_reflection_composite.py  test_reflection_minimal.py  test_reflection_minimal_old.py  test_reflection_name_folding.py  test_reflection_opaque_types.py  test_reflection_select_style.py  test_select_limit_offset_fetch_compilation.py  test_sqla_compat_private_api.py  test_sqlalchemy20_textual_sql.py  test_sqlalchemy21_constructs.py  test_sqlalchemy_suite_gate.py  test_temp_tables.py
